force-app/main/default/objects/Utility_Account_Meter_Relation__c/Utility_Account_Meter_Relation__c.object-meta.xml
<CustomObject>
    <label>Utility Account Meter Relation</label>
    <nameField>
        <label>Utility_Account_Meter_Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Account Meter Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>