force-app/main/default/objects/Utility_Account_Meter_Relation__c/fields/Unique_Relation_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Relation_Id__c</fullName>
    <description>Used as a Distinct Identifier</description>
    <inlineHelpText>Used as a Distinct Identifier</inlineHelpText>
    <label>Unique Relation Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>