force-app/main/default/objects/Utility_Account_Meter_Relation__c/fields/Utility_Account__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account__c</fullName>
    <label>Utility Account</label>
    <referenceTo>UtilityAccount__c</referenceTo>
    <relationshipLabel>Utility Account Meter Relations</relationshipLabel>
    <relationshipName>Utility_Account_Meter_Relations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>