force-app/main/default/objects/Utility_Account_Meter_Relation__c/fields/Utility_Meter__c.field-meta.xml
<CustomField>
    <fullName>Utility_Meter__c</fullName>
    <label>Utility Meter</label>
    <referenceTo>UtilityMeter__c</referenceTo>
    <relationshipLabel>Utility Account Meter Relations</relationshipLabel>
    <relationshipName>Utility_Account_Meter_Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>